# telegram-pocket-bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bot/core/: authentication.py  callbacks.py  commands.py  constants.py  conversation.py  engine.py  messages.py  models.py  pocket.py  renderers.py
bot/core/migrations/: 0001_initial.py  0002_alter_botuser_id.py  0003_botuser_pocket_request_token.py  0004_botuser_pocket_access_token.py  0005_botuser_pocket_username.py  0006_stats.py  0007_feedback.py  0008_broadcast.py
bot/settings/: base.py  dev.py  prod.py
